# libavirt

./: CMakeLists.txt  README.md  version.cmake
include/: avirt.h
include/avirt/: avirt.h
src/: avirt-config.c
